--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Sample HTML Page</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <center>
+    <Br><h1>Hello World</h1><Br>
     <p>This is a simple HTML document structure.</p>
+    </center>
 </body></html> 
 </hmt>
